[package]
name = "cliws"
version = "0.1.0"
authors = ["b23r0 <b23r0@foxmail.com>"]
edition = "2021"

[dependencies]
websocket = "0.26.2"
simple_logger = "1.13.0"
log = "0.4.14"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.23.0"
atty = "0.2"
ioctl-rs = "0.2"
signal-hook = "0.3.10"
#openssl-sys = "0.9.67"

[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = ["namedpipeapi","synchapi"] }
conpty = "0.2.1"

#[features]
#vendored = ["openssl-sys/vendored"]
# cargo build --target=x86_64-unknown-linux-musl --features vendored --release
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.